test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/02-update.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - ns.yaml
assert:
  - resource-assert.yaml
