test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/03-update-source.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - update-source.yaml
assert:
  - synchronized-target.yaml
