test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/cluster-policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-with-multi-clone-update
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
