test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/manifests.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstap-config
  namespace: default
  labels:
    allowedToBeCloned:  "true"
data:
  initial_lives: "15"
---
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: default
  labels:
    allowedToBeCloned:  "true"
type: kubernetes.io/basic-auth
stringData:
  username: admin
  password: t0p-Secret-super
