test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/synchronized-target.yaml
---
apiVersion: v1
data:
  initial_lives: "50"
kind: ConfigMap
metadata:
  labels:
    allowedToBeCloned: "true"
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/clone-policy-name: sync-secret-with-multi-clone
    kyverno.io/background-gen-rule: sync-secret
    kyverno.io/generated-by-kind: Namespace
    kyverno.io/generated-by-name: prod
    kyverno.io/generated-by-namespace: ""
    policy.kyverno.io/policy-name: sync-secret-with-multi-clone
    policy.kyverno.io/synchronize: enable
  name: bootstrap-config
  namespace: prod
