test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/update-source.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstap-config
  namespace: default
  labels:
    allowedToBeCloned:  "true"
data:
  initial_lives: "50"
