test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/resource-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstrap-config
  namespace: prod
  labels:
    allowedToBeCloned:  "true"
data:
  initial_lives: "15"
---
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: prod
  labels:
    allowedToBeCloned:  "true"
type: kubernetes.io/basic-auth
stringData:
  username: admin
  password: t0p-Secret-super
